--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,4 +35,4 @@ jobs:
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.configuration }}
 
     - name: Run tests
-      run: ctest --test-dir ${{ github.workspace }}/build/test-cpp -C ${{ matrix.configuration }} --output-on-failure
+      run: ctest --test-dir ${{ github.workspace }}/build -C ${{ matrix.configuration }} --output-on-failure
