Update github actions to run on main branch

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,9 @@ name: Build and Test
 
 on:
   push:
-    branches: [ "cpp-impl" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "cpp-impl" ]
+    branches: [ "main" ]
 
 jobs:
   build:
