Add obsidian-interface target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,10 @@ target_compile_definitions(obsidian PRIVATE
         OBS_VERSION_PATCH=${PROJECT_VERSION_PATCH}
 )
 
+add_library(obsidian-interface INTERFACE include/obs/obs.hpp)
+target_include_directories(obsidian-interface PUBLIC include)
+
+
 if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
     target_link_libraries(obsidian PRIVATE ${OBS_LLVM_PATH}/lib/libclang.lib opal)
 else ()
